background color fixed | z-index for navbar fixed

--- a/pointsLab-codeContents/index.scss
+++ b/pointsLab-codeContents/index.scss
@@ -80,7 +80,7 @@ body {
     background-color: #fffdea;
     position: fixed;
     margin: 30px;
-    z-index: 2;
+    z-index: 5;
     border: 1px solid black;
     font-family: 'Montserrat', sans-serif;
     display: flex;
@@ -95,11 +95,15 @@ body {
     a{
         @include textToggle(black, 0.8rem, 500);
         padding-right: 20px;
+        margin: auto;
     }
     #logo {
         font-weight: bolder;
         font-size: 1.6rem;
         font-family: 'Merriweather-Light';
+    }
+    .conicalFlask {
+        max-height: 20px;
     }
     button {
         max-width: fit-content;
@@ -267,6 +271,7 @@ button:hover {
     left: calc(0.5*(100% - 1500px));
     padding-bottom: 75px;
     padding-left: 30px;
+    font-family: 'Merriweather';
 }
 
 .tab_box {
